--- a/TPW_PN_JS/TPW_PN_JS.csproj
+++ b/TPW_PN_JS/TPW_PN_JS.csproj
@@ -64,8 +64,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Class1.cs" />
-    <Compile Include="Dane\Kulka.cs" />
-    <Compile Include="Logika\KulkaService.cs" />
+    <Compile Include="Logika\Kulka.cs" />
     <Compile Include="Prezentacja\View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -98,6 +97,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Dane\" />
     <Folder Include="Prezentacja\Model\" />
     <Folder Include="Prezentacja\ViewModel\" />
   </ItemGroup>
